# code-plan-usage

./: .gitignore  Cargo.toml  README.md  opencode.json  response.txt  tiers.json
.agents/skills/acceptance-tester/: SKILL.md
.agents/skills/agent-code-workflow/: SKILL.md
.agents/skills/agent-core/: SKILL.md
.agents/skills/archive/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/coding-plan-widget-docs/: SKILL.md
.agents/skills/coding-principles/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/doc-sync/: SKILL.md
.agents/skills/explore/: SKILL.md
.agents/skills/feature-sync/: SKILL.md
.agents/skills/goal/: SKILL.md
.agents/skills/new-project/: SKILL.md
.agents/skills/organize/: SKILL.md
.agents/skills/paper-intake/: SKILL.md
.agents/skills/requirements-tracker/: SKILL.md  features.md  requirements.md
.agents/skills/unit-testing/: SKILL.md
.agents/skills/verify/: SKILL.md
.agents/skills/worktree-isolation/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  screen.rs  theme.rs  tray.rs
crates/shared/src/widgets/: arc.rs  color_key.rs  drag.rs  geometry.rs  mod.rs  settings_panel.rs  tooltip.rs
crates/volcengine/: Cargo.toml
crates/volcengine/src/: api.rs  main.rs  settings.rs  webview_login.rs  widget.rs
installer/: build.bat  coconut-build.bat  coconut-plan-widget.wxs  coding-plan-widget.wxs
src/: api.rs  browser_cookies.rs  lib.rs  log.rs  main.rs  settings.rs  theme.rs  tray.rs  webview_login.rs  widget.rs
