[package]
name = "coding-plan-widget"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eframe = "0.31"
egui = "0.31"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
tray-icon = "0.24"
