[package]
name = "coding-plan-widget"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "coding-plan-widget"
path = "src/main.rs"

[dependencies]
coding-plan-widget-shared = { path = "../shared" }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.34"
windows = { version = "0.58", features = ["implement", "Win32_Security_Cryptography", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Com", "Win32_System_LibraryLoader"] }
